# FITD

./: Makefile.in  aclocal.m4  config.status  configure  configure.ac
src/: Makefile  Makefile.am  Makefile.in  actorList.c  actorList.h  aitdBox.c  aitdBox.h  anim.c  anim.h  animAction.c  animAction.h  common.h  config.h  config.h.in  cosTable.c  cosTable.h  debugFont.c  debugger.c  debugger.h  evalVar.c  evalVar.h  fileAccess.c  fileAccess.h  floor.c  floor.h  fmopl.c  fmopl.h  font.c  font.h  hqr.c  hqr.h  input.c  input.h  inventory.c  inventory.h  life.c  life.h  life2.c  life2.h  life_2.c  (+44 more)
win32/visual .net 2003/: FITD.vcproj
