bin_PROGRAMS = fitd 
fitd_SOURCES = actorList.c actorList.h aitdBox.c aitdBox.h animAction.c animAction.h anim.c anim.h common.h cosTable.c cosTable.h debugFont.c debugFont.h debugger.c debugger.h evalVar.c evalVar.h fileAccess.c fileAccess.h floor.c floor.h font.c font.h hqr.c hqr.h input.c input.h inventory.c inventory.h life.c life.h lines.c main.c main.h mainLoop.c mainLoop.h object.c object.h osystem.h osystemSDL.c osystemSDL_GL.c pak.c pak.h polys.c renderer.c renderer.h room.c room.h save.c save.h screen.c screen.h startupMenu.c startupMenu.h tatou.c tatou.h threadCode.c threadCode.h time.c time.h track.c track.h unpack.c unpack.h vars.c vars.h version.c version.h videoMode.c videoMode.h zv.c zv.h 


